# VoteGrasp

./: .gitignore  README.md  predict.py  train.py
YCB-models/005_tomato_soup_can/: nontextured.wrl
YCB-models/007_tuna_fish_can/: nontextured.wrl  nontextured.xyz
YCB-models/008_pudding_box/: nontextured.xyz
YCB-models/010_potted_meat_can/: nontextured.wrl
YCB-models/011_banana/: nontextured.ply  nontextured.wrl  nontextured.xyz
YCB-models/024_bowl/: nontextured.wrl  nontextured.xyz
YCB-models/025_mug/: nontextured.wrl  nontextured.xyz
YCB-models/044_flat_screwdriver/: nontextured.wrl  nontextured.xyz
YCB-models/050_medium_clamp/: nontextured.wrl
YCB-models/051_large_clamp/: nontextured.ply  nontextured.wrl  nontextured.xyz
YCB-models/052_extra_large_clamp/: nontextured.wrl
YCB-models/055_baseball/: nontextured.ply  nontextured.xyz
YCB-models/061_foam_brick/: nontextured.xyz
YCB-models/065-h_cups/: nontextured.xyz
blender-scripts/: README.md  empty.blend  scene1_object_pose.txt  scene_camera_pose.txt  scene_grasp.txt  scene_object_pose.txt  virtual-camera.py  vote_grasp.py
blender-scripts/depth/: 0.exr  1.exr  2.exr  3.exr  4.exr  5.exr  6.exr  7.exr
blender-scripts/pointcloud/: 0.ply  1.ply  2.ply  3.ply  4.ply  5.ply  6.ply  7.ply  models.ply
blender-scripts/tools/: mask2semantic.py  virtual-camera.py
blender-scripts/trash/: auto_node.blend  auto_node.py  camera.blend  camera.py  test.py
docker/: Dockerfile  note
graspit/: .gitignore  README.md
graspit/models/: virtual.vgr
graspit/worlds/: banana_obtacles.xml  franka_banana.xml  franka_banana_obstacles.xml  franka_mug.xml  franka_sphere.xml  jaco_robot_world.xml  scene1_011.xml
models/: dump_helper.py  loss_helper.py  proposal_module.py  votegrasp.py
pointnet2/: pointnet2_modules.py
real_robot_grasping/: README.md
real_robot_grasping/panda_demos/force_controllers/: CMakeLists.txt  README.md  force_controllers_plugin.xml  package.xml
real_robot_grasping/panda_demos/force_controllers/config/: panda_impedance.yaml
real_robot_grasping/panda_demos/force_controllers/include/: base_effort_controller.h  hiqp_time_point.h  impedance_controller.h  robot_state.h  utilities.h
real_robot_grasping/panda_demos/force_controllers/launch/: impedance_controller.launch  rqt_plot.launch
real_robot_grasping/panda_demos/force_controllers/src/: base_effort_controller.cpp  hiqp_time_point.cpp  impedance_controller.cpp  utilities.cpp
ros_votegrasp/: CMakeLists.txt  README.md  package.xml
ros_votegrasp/data/: 0.txt
ros_votegrasp/launch/: camera_world.launch  depth2pointcloud.launch  grasp.rviz  grasp_world.rviz  gripper_world.launch  (+5 more)
simulation_grasping/: README.md
simulation_grasping/franka_vision_manipulation/move_franka/: CMakeLists.txt  package.xml
simulation_grasping/franka_vision_manipulation/move_franka/launch/: execute_grasp.launch  move_franka.launch
simulation_grasping/franka_vision_manipulation/move_franka/src/: execute_grasp_node.cpp  move_franka_node.cpp  test_robot_node.cpp
ycbgrasp/: model_util_ycbgrasp.py  ycbgrasp_data.py  ycbgrasp_dataset.py  ycbgrasp_utils.py
(+209 files in other folders)
